# SEAL

./: build.sh  clean.sh  make-hedgelib.sh
hedge/hedge/: ciphertext.c  ciphertext.h  ckks.c  ckks.h  context.c  context.h  decryptor.c  decryptor.h  defines.h  encryptionparams.c  encryptionparams.h  encryptor.c  encryptor.h  galoiskeys.c  galoiskeys.h  globals.c  globals.h  hedge.c  hedge.h  hedge_glue.h  hedge_internals.c  hedge_internals.h  hedge_malloc.c  hedge_malloc.h  hedge_params.c  hedge_params.h  keygenerator.c  keygenerator.h  kswitchkeys.c  kswitchkeys.h  plaintext.c  plaintext.h  publickey.c  publickey.h  relinkeys.c  relinkeys.h  secretkey.c  secretkey.h  valcheck.c  valcheck.h
hedge/math/: CMakeLists.txt  baseconverter.c  baseconverter.h  modulus.c  modulus.h  numth.c  numth.h  polyarith.c  polyarith.h  polyarithmod.c  polyarithmod.h  polyarithsmallmod.c  polyarithsmallmod.h  polycore.h  rlwe.c  rlwe.h  rng.c  rng.h  smallmodulus.c  smallmodulus.h  smallntt.c  smallntt.h  uintarith.c  uintarith.h  uintarithmod.c  uintarithmod.h  uintarithsmallmod.c  uintarithsmallmod.h  uintcore.c  uintcore.h
testing/test/: CMakeLists.txt  ctest.h  test.c
